fix: typings index export resolution
- Adds @typescript-eslint/parser as dependency
- Adds override for eslint just for d.ts files.

Dependencies has been automaticaly sort on package.json by yarn.

--- a/package.json
+++ b/package.json
@@ -179,8 +179,6 @@
         "lodash.assign": "^4.2.0"
     },
     "devDependencies": {
-        "@types/d3-selection": "^1.4.1",
-        "typescript": "^3.9.2",
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-proposal-decorators": "^7.0.0",
@@ -201,6 +199,8 @@
         "@babel/plugin-transform-async-to-generator": "^7.4.4",
         "@babel/plugin-transform-runtime": "^7.4.4",
         "@babel/preset-env": "^7.0.0",
+        "@types/d3-selection": "^1.4.1",
+        "@typescript-eslint/parser": "^4.6.1",
         "babel-eslint": "^9.0.0",
         "babel-istanbul": "^0.12.2",
         "babel-loader": "^8.0.0",
@@ -247,8 +247,8 @@
         "node-gyp": "4.0.0",
         "node-sass": "4.13.1",
         "phantomjs-polyfill-find": "ptim/phantomjs-polyfill-find",
-        "prismjs": "1.21.0",
         "prettier": "^2.0.5",
+        "prismjs": "1.21.0",
         "pubsub-js": "1.7.0",
         "requirejs-plugins": "^1.0.2",
         "rimraf": "^2.6.3",
@@ -262,6 +262,7 @@
         "stylelint-config-standard": "^20.0.0",
         "stylelint-scss": "^3.17.2",
         "text": "requirejs/text",
+        "typescript": "^3.9.2",
         "underscore": "1.9.1",
         "webpack": "4.35.0",
         "webpack-bundle-analyzer": "3.3.2",
